--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,19 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-<head>
-	<script type="text/javascript" src="phonegap.js">
-	</script>
-	<title>
-
-	</title>
-</head>
-<body>
-		<p>Hello World</p>
-</body>
+  <head>
+    <title>mobiletuts phonegap</title>
+  <script src="phonegap-1.2.0.js"></script>
+  <script>
+     function onLoad(){
+          document.addEventListener("deviceready", onDeviceReady, true);
+     }
+     function onDeviceReady(){
+          navigator.notification.alert("PhoneGap is working!!");
+     }
+  </script>
+  </head>
+  <body onload="onLoad();">
+       <h1>Welcome to PhoneGap</h1>
+       <h2>Edit assets/www/index.html</h2>
+  </body>
 </html>
