--- a/www/Index.html
+++ b/www/Index.html
@@ -1,20 +1,59 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
+<!--
+       Licensed to the Apache Software Foundation (ASF) under one
+       or more contributor license agreements.  See the NOTICE file
+       distributed with this work for additional information
+       regarding copyright ownership.  The ASF licenses this file
+       to you under the Apache License, Version 2.0 (the
+       "License"); you may not use this file except in compliance
+       with the License.  You may obtain a copy of the License at
+
+         http://www.apache.org/licenses/LICENSE-2.0
+
+       Unless required by applicable law or agreed to in writing,
+       software distributed under the License is distributed on an
+       "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+       KIND, either express or implied.  See the License for the
+       specific language governing permissions and limitations
+       under the License.
+-->
 <html>
-  <head>
-    <title>Phonegap</title>
-  <script src="phonegap-1.2.0.js"></script>
-  <script>
-     function onLoad(){
-          document.addEventListener("deviceready", onDeviceReady, true);
-     }
-     function onDeviceReady(){
-          navigator.notification.alert("PhoneGap is working!!");
-     }
-  </script>
-  </head>
-  <body onload="onLoad();">
-       <h1>Welcome to PhoneGap</h1>
-	   <p>New change</p>
-       <h2>Edit assets/www/index.html</h2>
-  </body>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="format-detection" content="telephone=no" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.3.0.min.css" />
+        <link rel="stylesheet" type="text/css" href="css/jquery.mobile.structure-1.3.0.min.css" />
+        <link rel="stylesheet" type="text/css" href="css/jquery.mobile.theme-1.3.0.min.css" />
+        <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCoM9I4u9KMjvEFg7LSHUNWnX-GB1j80Ws&sensor=false"></script>
+        <script type="text/javascript" src="cordova-2.5.0.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+        <script type="text/javascript" src="js/jquery.mobile-1.3.0.min.js"></script>
+        <script type="text/javascript">
+          app.initialize();
+        </script>
+      <title>Hello World</title>
+    </head>
+    <body>
+      <div id="wrapper" data-role="page">
+        <div data-role="content" class="app">
+          <div class="menu">
+            <img src="img/logo.png"></img>
+            <p>Select which native feature you would like to test out</p>
+          </div>
+          <div id="deviceready" class="blink">
+            <p class="event listening">Connecting to Device</p>
+            <p class="event received">Device is Ready</p>
+          </div>
+
+              <a href="geolocation.html" data-ajax="false" data-role="button" data-theme="a">Camera</a>
+              <a href="geolocation.html" data-ajax="false" data-role="button" data-theme="a">Geolocation</a>
+              <a href="#" data-role="button" data-theme="a">Media</a>
+              <a href="#" data-role="button" data-theme="a">QR Code</a>
+
+        </div>
+      </div>
+    </body>
 </html>
