--- a/www/geolocation.html
+++ b/www/geolocation.html
@@ -28,6 +28,8 @@
       <link rel="stylesheet" type="text/css" href="css/index.css" />
       <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCoM9I4u9KMjvEFg7LSHUNWnX-GB1j80Ws&sensor=false"></script>
       <script type="text/javascript" src="cordova-2.5.0.js"></script>
+      <script type="text/javascript" src="cordova.js"></script>
+      <script type="text/javascript" src="phonegap.js"></script>
       <script type="text/javascript" src="js/geolocation.js"></script>
       <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
       <script type="text/javascript" src="js/jquery.mobile-1.3.0.min.js"></script>
