Box moves right and left for accelerometer

--- a/www/accelerometer.html
+++ b/www/accelerometer.html
@@ -41,9 +41,13 @@
         </div>
         <div data-role="content" class="app">
           <img src="img/logo.png"></img>
-          <p>Tilt your phone to see its current X and Y positions</p>
-          <p id="currentX"></p>
-          <p id="currentY"></p>
+          <p>Tilt your phone to see its current X and Y positions, it will also move the box</p>
+          <p id="currentX">Loading X..</p>
+          <p id="currentY">Loading Y..</p>
+          <p id="currentVal"></p>
+          <div>
+            <canvas id="myCanvas"></canvas>
+          </div>
         </div>
       </div>
     </body>
