--- a/www/camera.html
+++ b/www/camera.html
@@ -65,7 +65,7 @@
         <div data-role="header">
           <h1>Photo</h1>
         </div>
-        <div data-role="content">
+        <div data-role="content" class="app">
           <button onclick="capturePicture();">Capture Photo</button>
           <p id="pictureStatus"></p>
           <div id="imagelocation">
@@ -77,7 +77,7 @@
         <div data-role="header">
           <h1>Audio</h1>
         </div>
-        <div data-role="content">
+        <div data-role="content" class="app">
           <button onclick="captureAudio();">Capture Audio</button>
           <p id="audioStatus"></p>
           <button onclick="playAudio();">Play Audio</button>
