--- a/www/geolocation.html
+++ b/www/geolocation.html
@@ -44,9 +44,12 @@
           <p class="event listening">No Internet Access</p>
         </div>
         <div id="geolocation">
-          <p>Latitude : <span id="lat"></span>
-          <p>Longitude : <span id="long"></span>
-        </p>
+          <p>
+            Latitude : <span id="lat"></span>
+          </p>
+          <p>
+            Longitude : <span id="long"></span>
+          </p>
         </div>
         <div id="mapSection"></div>
       </div>
