Gelocation is working!!!

--- a/www/Index.html
+++ b/www/Index.html
@@ -39,7 +39,7 @@
       <title>Hello World</title>
     </head>
     <body>
-      <div id="wrapper" data-role="page">
+      <div class="wrapper" data-role="page">
         <div data-role="header">
           <h1>Home</h1>
         </div>
