--- a/www/accelerometer.html
+++ b/www/accelerometer.html
@@ -35,20 +35,40 @@
       <title>Hello World</title>
     </head>
     <body>
-      <div id="wrapper" data-role="page">
+      <div id="acc" class="wrapper" data-role="page">
         <div data-role="header">
           <h1>Accelerometer</h1>
+          <div data-role="navbar">
+            <ul>
+              <li>
+                <a href="#game">Game</a>
+              </li>
+            </ul>
+          </div>
         </div>
         <div data-role="content" class="app">
-          <img src="img/logo.png"></img>
           <p>Tilt your phone to see its current X and Y positions, it will also move the box</p>
           <p id="currentX">Loading X..</p>
           <p id="currentY">Loading Y..</p>
-          <p id="currentVal"></p>
-          <div>
-            <canvas id="myCanvas"></canvas>
+          <canvas id="myCanvas"></canvas>
+        </div>
+      </div>
+      <div class="wrapper" id="game" data-role="page">
+        <div data-role="header">
+          <h1>Game</h1>
+          <div data-role="navbar">
+            <ul>
+              <li>
+                <a href="#acc">Accelerometer</a>
+              </li>
+            </ul>
           </div>
         </div>
+        <div data-role="content" class="app">
+          <button onclick="startGame();">Start</button>
+          <p id="score">Current Score : 0</p>
+          <canvas id="gameCanvas"></canvas>
+        </div>        
       </div>
     </body>
 </html>
