--- a/www/camera.html
+++ b/www/camera.html
@@ -35,7 +35,7 @@
       <title>Hello World</title>
     </head>
     <body>
-      <div id="wrapper" data-role="page">
+      <div id="capture" class="wrapper" data-role="page">
         <div data-role="header">
           <h1>Capture</h1>
           <div id="head" data-role="navbar">
@@ -61,7 +61,7 @@
           </div>      
         </div>
       </div>
-      <div id="photo" data-role="page">
+      <div id="photo" class="wrapper" data-role="page">
         <div data-role="header">
           <h1>Photo</h1>
         </div>
@@ -73,7 +73,7 @@
           </div>
         </div>
       </div>
-      <div id="audio" data-role="page">
+      <div id="audio" class="wrapper" data-role="page">
         <div data-role="header">
           <h1>Audio</h1>
         </div>
