--- a/www/geolocation.html
+++ b/www/geolocation.html
@@ -36,20 +36,12 @@
       <title>Gelocation</title>
     </head>
     <body>
-      <div data-role="page">
+      <div class="wrapper" data-role="page">
         <div data-role="header">
            <h1>Geolocation</h1>
         </div>
         <div id="noInternet">
           <p class="event listening">No Internet Access</p>
-        </div>
-        <div id="geolocation">
-          <p>
-            Latitude : <span id="lat"></span>
-          </p>
-          <p>
-            Longitude : <span id="long"></span>
-          </p>
         </div>
         <div id="mapSection"></div>
       </div>
