--- a/www/libary.html
+++ b/www/libary.html
@@ -29,36 +29,22 @@
         <script type="text/javascript" src="cordova-2.5.0.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="phonegap.js"></script>
-        <script type="text/javascript" src="js/camera.js"></script>
+        <script type="text/javascript" src="js/libary.js"></script>
         <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
         <script type="text/javascript" src="js/jquery.mobile-1.3.0.min.js"></script>
-      <title>Hello World</title>
+      <title>Libary</title>
     </head>
     <body>
       <div id="capture" class="wrapper" data-role="page">
         <div data-role="header">
-          <h1>Capture</h1>
-          <div id="head" data-role="navbar">
-            <ul>
-              <li><a href="#photo">Photo</a></li>
-              <li><a href="#">Video</a></li>
-              <li><a href="#audio">Audio</a></li>
-            </ul>
-          </div>
+          <h1>Libary</h1>
         </div>
         <div data-role="content" class="app">
-          <img src="img/logo.png"></img>
-          <p>Here you can select which capture device you would like to use, the menu location also changes depending on what platform you are on</p>
-          <p id="platform"></p>
-        </div>
-        <div id="foot" data-role="footer">
-          <div data-role="navbar">
-            <ul>
-              <li><a id="photo" href="#photo">Photo</a></li>
-              <li><a id="video" href="#">Video</a></li>
-              <li><a id="audio" href="#">Audio</a></li>
-            </ul>
-          </div>      
+          <a href="#" data-role="button" onclick="retrievePicture();">Retrieve Photo</a>
+          <p id="pictureStatus"></p>
+          <div id="imagelocation">
+            <img id="capturedImage"></img>
+          </div>
         </div>
       </div>
     </body>
